Update EvidenceCollector and project files