@@ -32,13 +32,34 @@ public class EvidenceCollector {
             return;
         }
 
-        if (captureScreenshot(caseId)) {
-            generateHtmlReport(caseId);
-            System.out.println("Evidence and report generated for case: " + caseId);
+        boolean running = true;
+        while (running) {
+            System.out.println("\n--- Cyberbullying Evidence Collector ---");
+            System.out.println("1. Take Screenshot");
+            System.out.println("2. Generate HTML Report");
+            System.out.println("3. Exit");
+            System.out.print("Choose an option: ");
+
+            String choice = scanner.nextLine().trim();
+
+            switch (choice) {
+                case "1":
+                    captureScreenshot(caseId);
+                    break;
+                case "2":
+                    generateHtmlReport(caseId);
+                    break;
+                case "3":
+                    running = false;
+                    System.out.println("Exiting program...");
+                    break;
+                default:
+                    System.out.println("Invalid choice. Try again.");
+            }
         }
     }
 
-    public static boolean captureScreenshot(String caseId) {
+    public static void captureScreenshot(String caseId) {
         try {
             Path caseFolder = Paths.get("Cases", caseId);
             Files.createDirectories(caseFolder);
@@ -55,19 +76,30 @@ public class EvidenceCollector {
             ImageIO.write(screenFullImage, "png", screenshotFile);
             System.out.println("Screenshot saved: " + screenshotFile.getAbsolutePath());
 
-            String hash = computeSHA256(Files.readAllBytes(screenshotFile.toPath()));
+            // Generate SHA-256 hash
+            MessageDigest digest = MessageDigest.getInstance("SHA-256");
+            try (InputStream fis = new FileInputStream(screenshotFile)) {
+                byte[] byteArray = fis.readAllBytes();
+                byte[] hashBytes = digest.digest(byteArray);
 
-            File logFile = new File(caseFolder.toFile(), "evidence_log.csv");
-            boolean newFile = logFile.createNewFile();
-            try (FileWriter writer = new FileWriter(logFile, true)) {
-                if (newFile) {
-                    writer.write("Screenshot Filename,Timestamp,SHA-256 Hash\n");
+                StringBuilder sb = new StringBuilder();
+                for (byte b : hashBytes) {
+                    sb.append(String.format("%02x", b));
                 }
-                writer.write(screenshotFileName + "," + readableTime + "," + hash + "\n");
-            }
+                String hash = sb.toString();
 
-            System.out.println("Metadata logged to evidence_log.csv");
-            return true;
+                // Append metadata to CSV
+                File logFile = new File(caseFolder.toFile(), "evidence_log.csv");
+                boolean newFile = logFile.createNewFile();
+                try (FileWriter writer = new FileWriter(logFile, true)) {
+                    if (newFile) {
+                        writer.write("Screenshot Filename,Timestamp,SHA-256 Hash\n");
+                    }
+                    writer.write(screenshotFileName + "," + readableTime + "," + hash + "\n");
+                }
+
+                System.out.println("Metadata logged to evidence_log.csv");
+            }
 
         } catch (AWTException e) {
             System.err.println("Error initializing screen capture: " + e.getMessage());
@@ -76,25 +108,49 @@ public class EvidenceCollector {
         } catch (NoSuchAlgorithmException e) {
             System.err.println("SHA-256 algorithm not available: " + e.getMessage());
         }
-        return false;
     }
 
-    public static String computeSHA256(byte[] data) throws NoSuchAlgorithmException {
-        MessageDigest digest = MessageDigest.getInstance("SHA-256");
-        byte[] hashBytes = digest.digest(data);
-        StringBuilder sb = new StringBuilder();
-        for (byte b : hashBytes) {
-            sb.append(String.format("%02x", b));
+    public static String computeSHA256(byte[] data) {
+        try {
+            MessageDigest digest = MessageDigest.getInstance("SHA-256");
+            byte[] hashBytes = digest.digest(data);
+
+            StringBuilder sb = new StringBuilder();
+            for (byte b : hashBytes) {
+                sb.append(String.format("%02x", b));
+            }
+            return sb.toString();
+        } catch (Exception e) {
+            return "HASH_ERROR";
         }
-        return sb.toString();
     }
-
     public static void generateHtmlReport(String caseId) {
-        String caseFolder = "Cases/" + caseId;
-        File logFile = new File(caseFolder + "/evidence_log.csv");
-        File htmlReport = new File(caseFolder + "/report.html");
+        try {
+            String caseFolder = "Cases/" + caseId;
+            File folder = new File(caseFolder);
+            if (!folder.exists()) {
+                folder.mkdirs();
+            }
+            File logFile = new File(caseFolder + "/evidence_log.csv");
+            String screenshotFileName = null;
 
-        try (FileWriter writer = new FileWriter(htmlReport)) {
+            if (logFile.exists()) {
+                try (BufferedReader reader = new BufferedReader(new FileReader(logFile))) {
+                    reader.readLine(); // Skip header
+                    String lastLine = null;
+                    String line;
+                    while ((line = reader.readLine()) != null) {
+                        lastLine = line;
+                    }
+                    if (lastLine != null) {
+                        String[] parts = lastLine.split(",", 3);
+                        if (parts.length == 3) {
+                            screenshotFileName = parts[0].trim();
+                        }
+                    }
+                }
+            }
+            FileWriter writer = new FileWriter(caseFolder + "/report.html");
             writer.write("<!DOCTYPE html>");
             writer.write("<html><head><title>Cyberbullying Case Report</title>");
             writer.write("<style>");
@@ -105,34 +161,42 @@ public class EvidenceCollector {
             writer.write("</style>");
             writer.write("</head><body>");
             writer.write("<h1>Cyberbullying Case Report: " + caseId + "</h1>");
-            writer.write("<p><strong>Timestamp:</strong> " + LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")) + "</p>");
-            writer.write("<h2>Evidence</h2>");
+            writer.write("<p><strong>Timestamp:</strong> " +
+                    LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss")) + "</p>");
+            writer.write("<h2>Screenshot</h2>");
+            if (screenshotFileName != null) {
+                writer.write("<img src='" + screenshotFileName + "' alt='Screenshot' " +
+                        "style='max-width:100%; border:1px solid #ccc;'/>");
+            }
+            else {
+                writer.write("<p>No screenshot found.</p>");
+            }
+            writer.write("<h2>Metadata</h2>");
             writer.write("<table>");
-            writer.write("<tr><th>Screenshot</th><th>Timestamp</th><th>SHA-256 Hash</th></tr>");
-
+            writer.write("<tr><th>Key</th><th>Value</th></tr>");
             if (logFile.exists()) {
-                try (BufferedReader reader = new BufferedReader(new FileReader(logFile))) {
-                    reader.readLine(); // skip header
-                    String line;
-                    while ((line = reader.readLine()) != null) {
+                try (Scanner reader = new Scanner(logFile)) {
+                    reader.nextLine(); // Skip header
+                    while (reader.hasNextLine()) {
+                        String line = reader.nextLine();
                         String[] parts = line.split(",", 3);
                         if (parts.length == 3) {
-                            writer.write("<tr>");
-                            writer.write("<td><a href=\"" + parts[0] + "\">" + parts[0] + "</a></td>");
-                            writer.write("<td>" + parts[1] + "</td>");
-                            writer.write("<td><code>" + parts[2] + "</code></td>");
-                            writer.write("</tr>");
+                            writer.write("<tr><td>Screenshot Filename</td><td>" + parts[0].trim() + "</td></tr>");
+                            writer.write("<tr><td>Timestamp</td><td>" + parts[1].trim() + "</td></tr>");
+                            writer.write("<tr><td>SHA-256 Hash</td><td><code>" + parts[2].trim() + "</code></td></tr>");
                         }
                     }
                 }
-            } else {
-                writer.write("<tr><td colspan='3'>No evidence found.</td></tr>");
             }
-
+            else {
+                writer.write("<tr><td colspan='2'>No metadata found.</td></tr>");
+            }
             writer.write("</table>");
             writer.write("</body></html>");
-            System.out.println("HTML report generated: " + htmlReport.getAbsolutePath());
-        } catch (IOException e) {
+            writer.close();
+            System.out.println("HTML report generated: " + caseFolder + "/report.html");
+        }
+        catch (IOException e) {
             System.out.println("Error generating HTML report: " + e.getMessage());
         }
     }
